# seperate_hr

./: .gitignore  README.md  env.example  main.py  pyproject.toml  test_streaming_api.py
agent_modules/: __init__.py  jd_parser.py  orchestrator.py  orchestrator_backup.py
api/: __init__.py  server.py  sse_service.py
config/: __init__.py  settings.py
docs/: scenario.md
scripts/: dev.sh  start_api.py  test_sse.py
tests/: __init__.py  sse_client_test.py
tools/: __init__.py  formatter.py  llm_tools.py  streaming_llm.py
utils/: __init__.py  session_manager.py
